k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: betterslcm
  namespace: betterslcm
spec:
  hostnames:
    - betterslcm.whyredfire.dev
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: backend
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /api
    - backendRefs:
        - name: frontend
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
